tests/reference/asr-cmplx_03-6426707.stderr
semantic error: Syntax error in `complex` constant
 --> tests/errors/cmplx_03.f90:2:13
  |
2 |     print*, cmplx((1.00000000, real(0, kind=4)), kind=8)
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
